# jfu-java

./: .gitignore  Cargo.toml  DEMO.md  EXAMPLES.md  README.md  build.rs  jfu-cache.json  jfu.toml  jfu.toml.example
examples/: docs_demo.rs
java-docs/: all-packages-methods.json
src/: build.rs  cache.rs  clean.rs  config.rs  error_format.rs  graph.rs  init.rs  lib.rs  main.rs  run.rs  search.rs  syntax.rs  tree.rs
src/docs/: embedded.rs  mod.rs  types.rs
test/: Cool.java  Helper.java  HelperTest.java  Main.java  Runner.java  Test.java  Utils.java
