[package]
name = "jfu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
colored = "3"
lazy_static = "1.4"
syntect = "5"
toml = "0.9"
terminal_size = "0.4.3"
regex = "1.10"
flate2 = "1.0"

[build-dependencies]
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
